added comments to code and refernces

--- a/folksongs/templates/map.html
+++ b/folksongs/templates/map.html
@@ -10,11 +10,12 @@
     <div class="card-header">
       <h3> The Map of Greig-Duncan Folk Song Collection </h3>
     </div>
+    <!-- This map was not created by team Alpha but was imbedded from the follwoing source "https://www.google.com/maps/d/embed?mid=1GXvJAwuQx0spixaLqCSMnRpd5lc" -->
     <div class="card map">
       <div class="card-body map">
         <iframe src="https://www.google.com/maps/d/embed?mid=1GXvJAwuQx0spixaLqCSMnRpd5lc" width="1000" height="600"></iframe>
       </div>
-      <div>
+      <div> 
         <div class="card-header">
           <h3> Credits </h3>
         </div>
