--- a/folksongs/templates/registration/login.html
+++ b/folksongs/templates/registration/login.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<!-- This was page was used in an earlier version of the application and is no oinger used as the team transferred to Django admin tools. A future development team can use a sing up page if required. -->
+<!-- Code was adapted and inspired by the lectures from Dr Scharlau at the University of Aberdeen - in the 'Enterprise Software Development' module. --> 
 
 <!-- Code adapted from the following https://getbootstrap.com/docs/4.0/components/card/#sizing -->
 <body style="background: rgb(255,255,240, 0.6);">
