--- a/folksongs/templates/registration/logout.html
+++ b/folksongs/templates/registration/logout.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
+
+<!-- This was page was used in an earlier version of the application and is no oinger used as the team transferred to Django admin tools. A future development team can use a sing up page if required. -->
+<!-- Code was adapted and inspired by the lectures from Dr Scharlau at the University of Aberdeen - in the 'Enterprise Software Development' module. --> 
+
     <h1>Folks: Login</h1>
     {% if form.errors %}
        <p>Your username and password didn't match. Please try again.</p>
