--- a/folksongs/templates/signup.html
+++ b/folksongs/templates/signup.html
@@ -2,7 +2,9 @@
 {% block content %}
 {% load static %}
 
+<!-- This was page was used in an earlier version of the application and is no oinger used as the team transferred to Django admin tools. A future development team can use a sing up page if required. -->
 <!-- code adpated from - https://getbootstrap.com/docs/5.0/layout/containers/-->
+<!-- Code was adapted and inspired by the lectures from Dr Scharlau at the University of Aberdeen - in the 'Enterprise Software Development' module. --> 
 <div class="container" id="reg-container" style="margin:auto;">
  <div class="card">
   <div class="container pt-3 my-3">
