--- a/folksongs/templates/song_add.html
+++ b/folksongs/templates/song_add.html
@@ -1,3 +1,7 @@
+<!-- Code was adapted and inspired by the lectures from Dr Scharlau at the University of Aberdeen - in the 'Enterprise Software Development' module. --> 
+<!-- This was page was used in an earlier version of the application and is no oinger used as the team transferred to Django admin tools. A future development team can use a sing up page if required. -->
+
+
 {% extends 'base.html' %}
 {% block content %}
 <form method="post" enctype="multipart/form-data">
