--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -1,3 +1,5 @@
+/* As per the clients request the website was styled with the University of Aberdeen colours and taking inspiration from the University of Aberdeen website - https://www.abdn.ac.uk/ */
+
 * * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
