--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="{% url 'map'%}"> Map </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://stark-mesa-89039.herokuapp.com/admin/"> Admin </a>
+              <a class="nav-link" href="https://gleb-kharlamov-msc-project.herokuapp.com/admin/"> Admin </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'help'%}"> Help </a>
