--- a/folksongs/templates/base.html
+++ b/folksongs/templates/base.html
@@ -12,6 +12,7 @@
       <meta name="description" content="Personal Webiste" />
       <meta name="title" property="og:title" content="Portfolio" />
       <meta property="og:type" content="Website" />
+      <meta name="image" property="og:image" content="{% static 'img/aberdeen.png' %}" />
       <meta property='og:image' content="{% static 'img/aberdeen.png' %}"/>
       <meta name="description" property="og:description" content="Personal Website" /><meta name="author" content="Gleb Kharlamov" />
       <link href="/static/style.css" type="text/css" rel="stylesheet">  
